--- a/index.html
+++ b/index.html
@@ -10,40 +10,39 @@
 </head>
 
 <body>
-    <header>
-        <div class="header__wrapper container">
-            <img class="pic1" src="img/logo.png" alt="">
-            <h5> Grow</h5>
-            <h4> Be</h4>
-            <nav class="navigation">
-                <a class="link" href="#">Home</a>
-                <a class="link" href="#">About Us</a>
-                <a class="link" href="#">Services</a>
-                <a class="link" href="#">Features</a>
-                <img class="iconka" src="img/icon (1).png" alt="Стрелка">
-                <a class="link" href="#">Team</a>
-                <a class="link" href="#">Blog</a>
-                <a class="link" href="#">Contact</a>
-            </nav>
-        </div>
-    </header>
     <main>
-        <section class="main__content container">
-            <div class="main__contnt__text">
-                <h1 class="big-title">SEO & Digital Marketing For Your Website.</h1>
+        <header>
+            <div class="header__wrapper container">
+                <img class="pic1" src="img/logo.png" alt="">
+                <h1> Grow</h1>
+                <h2> Be</h2>
+                <nav class="navigation">
+                    <a class="link" href="#">Home</a>
+                    <a class="link" href="#">About Us</a>
+                    <a class="link" href="#">Services</a>
+                    <a class="link" href="#">Features
+                        <img class="iconka" src="img/icon (1).png" alt="Стрелка">
+                    </a>
+                    <a class="link" href="#">Team</a>
+                    <a class="link" href="#">Blog</a>
+                    <a class="link" href="#">Contact</a>
+                </nav>
+            </div>
+        </header>
 
+        <section class="main__content container">
+            <div class="main__content__text">
+                <h1 class="big-title">SEO & Digital Marketing For Your Website.</h1>
                 <p class="text">Provide all kind of seo services and help to improve seo ranking. Globally incubate
                     standards.</p>
-
                 <div class="btns-list">
                     <button class="btn">Start Now</button>
                     <button class="btn1">Watch Video</button>
                 </div>
             </div>
-
             <img class="img-right" src="img/pngfind.png" alt="lorem">
-
         </section>
+
         <article class="logos container">
             <img src="img/1.png" alt="">
             <img src="img/2.png" alt="">
@@ -52,6 +51,80 @@
             <img src="img/5.png" alt="">
             <img src="img/6.png" alt="">
         </article>
+
+        <section class="Frame2 container ">
+            <div class="blockText2 ">
+                <h3>Perfect Solution For Your Business</h3>
+                <h4>Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+                    applications through revolutionary catalysts for chang the Seamlessly underwhelm optimal testing
+                    procedures.</h4>
+                <button class="btn3">Learn More</button>
+            </div>
+            <img class="Macbook" src="img/macbook.png" alt="Macbook">
+        </section>
+
+        <section class="Frame3 container">
+            <div class="Features">
+                <div class="Features1">
+                    <img class="Features_Icon" src="img/Features1.png" alt="">
+                    <div class="Features_Title">Grow Your Business</div>
+                    <div class="Features_par1"> Leverage agile frameworks to provide a robust synopsis for high level
+                        overviews. </div>
+                    <div class="Features_par2">Read More...</div>
+                </div>
+
+                <div class="Features2">
+                    <img class="Features_Icon" src="img/Features2.png" alt="">
+                    <div class="Features_Title">Get Quality Ieads</div>
+                    <div class="Features_par1">Leverage agile frameworks to provide a robust synopsis for high level
+                        overviews. </div>
+                    <div class="Features_par2">Read More...</div>
+                </div>
+
+                <div class="Features3">
+                    <img class="Features_Icon" src="img/Features3.png" alt="">
+                    <div class="Features_Title">Drive More Sales</div>
+                    <div class="Features_par1">Leverage agile frameworks to provide a robust synopsis for high level
+                        overviews. </div>
+                    <div class="Features_par2">Read More...</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="Frame4 container">
+            <div class="Services">
+                <div class="title">
+                    <div class="title_big">Why You Should Choose Us.</div>
+                    <div class="title_par">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly
+                        coordinate e-business applications through revolutionary catalysts.</div>
+                </div>
+
+                <div class="Services_block container">
+                    <div class="Services1">
+                        <img class="Services_pic" src="img/Services1.png" alt="">
+                        <div class="Services_Title">Keyword Research</div>
+                        <div class="Services_par">Business applications through revolutionary catalysts for chang the
+                            Seamlessly underwhelm dures.</div>
+                        <button class="btn4">Learn More</button>
+                    </div>
+
+                    <div class="Services2">
+                        <img class="Services_pic" src="img/Services2.png" alt="">
+                        <div class="Services_Title">Seo Optimazadion</div>
+                        <div class="Services_par">Business applications through revolutionary catalysts for chang the
+                            Seamlessly underwhelm dures.</div>
+                        <button class="btn4">Learn More</button>
+                    </div>
+
+                    <div class="Services3">
+                        <img class="Services_pic" src="img/Services3.png" alt="">
+                        <div class="Services_Title">Social Marketing</div>
+                        <div class="Services_par">Business applications through revolutionary catalysts for chang the
+                            Seamlessly underwhelm dures.</div>
+                        <button class="btn4">Learn More</button>
+                    </div>
+                </div>
+        </section>
     </main>
 </body>
 
